# employee-management-system

server/: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
server/core/: .env.example  .gitignore  db.sqlite3
server/core/core/: settings.py  urls.py
server/core/core/base/: choices.py  models.py
server/core/departments/: models.py  urls.py  views.py
server/core/departments/migrations/: 0001_initial.py
server/core/employees/: admin.py  models.py  serializers.py  urls.py  views.py
server/core/employees/migrations/: 0001_initial.py  0002_attendance_leave.py  0003_employee_address_employee_phone.py  0004_employee_designation_alter_employee_address_and_more.py  0005_alter_employee_address_alter_employee_designation_and_more.py
server/core/projects/: models.py  serializer.py  urls.py  views.py
server/core/projects/migrations/: 0001_initial.py  0002_remove_project_department_remove_project_employees.py
server/core/teams/: models.py  serializers.py  urls.py  views.py
server/core/teams/migrations/: 0001_initial.py  0002_remove_team_department.py
server/core/users/: admin.py  models.py  serializers.py  urls.py  views.py
server/core/users/migrations/: 0001_initial.py  0002_role_created_at_role_updated_at_alter_role_title.py  (+1 more)
server/employee_management/: settings.py  urls.py
server/tables/attendance/: models.py
server/tables/department/: models.py
server/tables/employee/: models.py
server/tables/leave/: models.py
server/tables/project/: models.py
server/tables/salary/: models.py
server/tables/team/: models.py
(+79 files in other folders)
