[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Rajan66 <rajanmaharjan042@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-rest-framework = "^0.1.0"
environs = "^14.1.1"
psycopg = "^3.2.5"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
